# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@tools//:defs.bzl", "json_test")
load("@tools//cmd/geosrbija:defs.bzl", "download", "extract_wkt")

download(
    name = "download",
    columns = [
        "god",
        "naziv",
        "opis_dobra",
        "tip_dobra",
    ],
    ids = range(1, 193),
    theme_uuid = "25b4792d-e53a-4904-8a40-71e05602ce52",
)

extract_wkt()

json_test(
    name = "json_test",
    srcs = glob(["*.json"]),
)
