# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@tools//:defs.bzl", "json_test")
load("@tools//cmd/geosrbija:defs.bzl", "download", "extract_wkt")

download(
    name = "download_republika_srbija",
    columns = [
        "republika_ime",
        "republika_imel",
    ],
    ids = [407],
    theme_uuid = "1665cf18-0fe2-4c07-b7a1-9e099b8f0d2c",
)

download(
    name = "download_pokrajina",
    columns = [
        "rap_ime",
        "rap_imel",
        "rap_sifra",
    ],
    ids = [419, 420, 421],
    theme_uuid = "925897b0-e563-4d4b-bcc3-4dd52ff51d0e",
)

extract_wkt()

json_test(
    name = "json_test",
    srcs = glob(["*.json"]),
)
