# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@tools//:defs.bzl", "json_test")
load("@tools//cmd/geosrbija:defs.bzl", "download", "extract_wkt")

download(
    name = "download",
    columns = [
        "okrug_ime",
        "okrug_imel",
        "okrug_sifra",
    ],
    ids = [
        1249,  # JABLANIČKI UPRAVNI OKRUG
        1275,  # SREDNJOBANATSKI UPRAVNI OKRUG
        1276,  # POMORAVSKI UPRAVNI OKRUG
        1277,  # BORSKI UPRAVNI OKRUG
        1278,  # MORAVIČKI UPRAVNI OKRUG
        1279,  # SEVERNOBANATSKI UPRAVNI OKRUG
        1286,  # KOLUBARSKI UPRAVNI OKRUG
        1289,  # JUŽNOBANATSKI UPRAVNI OKRUG
        1290,  # PODUNAVSKI UPRAVNI OKRUG
        1291,  # BRANIČEVSKI OKRUG
        1292,  # ŠUMADIJSKI UPRAVNI OKRUG
        1364,  # JUŽNOBAČKI UPRAVNI OKRUG
        1365,  # SREMSKI UPRAVNI OKRUG
        1366,  # ZLATIBORSKI UPRAVNI OKRUG
        1367,  # SEVERNOBAČKI UPRAVNI OKRUG
        1375,  # GRAD BEOGRAD
        1377,  # PČINJSKI UPRAVNI OKRUG
        1378,  # ZAJEČARSKI UPRAVNI OKRUG
        1379,  # PIROTSKI UPRAVNI OKRUG
        1380,  # ZAPADNOBAČKI UPRAVNI OKRUG
        1381,  # NIŠAVSKI UPRAVNI OKRUG
        1382,  # TOPLIČKI UPRAVNI OKRUG
        1393,  # RASINSKI UPRAVNI OKRUG
        1394,  # RAŠKI UPRAVNI OKRUG
        1396,  # MAČVANSKI UPRAVNI OKRUG
        1397,  # KOSOVSKO-MITROVAČKI OKRUG
        1398,  # PRIZRENSKI UPRAVNI OKRUG
        1399,  # PEĆKI UPRAVNI OKRUG
        1400,  # KOSOVSKI UPRAVNI OKRUG
        1401,  # KOSOVSKO-POMORAVSKI UPRAVNI OKRUG
    ],
    theme_uuid = "4d17a40b-2067-49cd-8769-e7d78f9f5ab5",
)

extract_wkt()

json_test(
    name = "json_test",
    srcs = glob(["*.json"]),
)
