# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@tools//:defs.bzl", "json_test")
load("@tools//cmd/geosrbija:defs.bzl", "download", "extract_wkt")

download(
    name = "download",
    columns = [
        "okrug_ime",
        "okrug_imel",
        "okrug_sifra",
    ],
    ids = [
        1249,  # JABLANIČKI OKRUG
        1275,  # SREDNJOBANATSKI OKRUG
        1276,  # POMORAVSKI OKRUG
        1277,  # BORSKI OKRUG
        1278,  # MORAVIČKI OKRUG
        1279,  # SEVERNOBANATSKI OKRUG
        1286,  # KOLUBARSKI OKRUG
        1289,  # JUŽNOBANATSKI OKRUG
        1290,  # PODUNAVSKI OKRUG
        1291,  # BRANIČEVSKI OKRUG
        1292,  # ŠUMADIJSKI OKRUG
        1364,  # JUŽNOBAČKI OKRUG
        1365,  # SREMSKI OKRUG
        1366,  # ZLATIBORSKI OKRUG
        1367,  # SEVERNOBAČKI OKRUG
        1375,  # GRAD BEOGRAD
        1377,  # PČINJSKI OKRUG
        1378,  # ZAJEČARSKI OKRUG
        1379,  # PIROTSKI OKRUG
        1380,  # ZAPADNOBAČKI OKRUG
        1381,  # NIŠAVSKI OKRUG
        1382,  # TOPLIČKI OKRUG
        1393,  # RASINSKI OKRUG
        1394,  # RAŠKI OKRUG
        1396,  # MAČVANSKI OKRUG
        1397,  # KOSOVSKO-MITROVAČKI OKRUG
        1398,  # PRIZRENSKI OKRUG
        1399,  # PEĆKI OKRUG
        1400,  # KOSOVSKI OKRUG
        1401,  # KOSOVSKO-POMORAVSKI OKRUG
    ],
    theme_uuid = "4d17a40b-2067-49cd-8769-e7d78f9f5ab5",
)

extract_wkt()

json_test(
    name = "json_test",
    srcs = glob(["*.json"]),
)
